Modificaciones a la cabecera, anadir redes sociales, cambiar texto a em

--- a/PROYECTO_RAMOS/index2.html
+++ b/PROYECTO_RAMOS/index2.html
@@ -58,7 +58,7 @@
     <!-- Inicio video -->
     <section id="inicioVideo">
         <div class="text_inicio">
-            <h2>LÍDERES EN CALIDAD DE CONTRUCCIÓN E INFRAESTRUCTURA</h2>
+            <h2>LÍDERES EN CALIDAD DE <br /> CONTRUCCIÓN E <br /> INFRAESTRUCTURA</h2>
             <h2>▼</h2>
         </div>
     </section>
@@ -212,8 +212,7 @@
         </div>
         <div class="barra">
         </div>
-        <iframe
-            class="mapai"
+        <iframe class="mapai"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1179.303921470019!2d-75.6117620076242!3d6.172276716709452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcec43685f650005c!2sParque%20Obrero!5e0!3m2!1ses-419!2sco!4v1586719878734!5m2!1ses-419!2sco"
             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0">
@@ -225,7 +224,25 @@
                     Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos: 914-135-288 o completa
                     el formulario a continuación
                 </p>
+                <h4>Redes Sociales</h4>
+                <div class="redes_sociales">
+                    <a target="blanck" href="https://web.facebook.com/?_rdc=1&_rdr">
+                        <img src="img/facebook.svg" alt="Facebook" title="Facebook">
+                    </a>
+                    <a target="blanck" href="https://www.youtube.com/">
+                        <img src="img/youtube.svg" alt="Youtube" title="Youtube">
+                    </a>
+                </div>
+                <div class="redes_sociales">
+                    <a target="blanck" href="https://www.instagram.com/?hl=es-la">
+                        <img src="img/instagram.svg" alt="Instagram" title="Instagram">
+                    </a>
+                    <a target="blanck" href="https://twitter.com/explore">
+                        <img src="img/twitter.svg" alt="Twitter" title="Twitter">
+                    </a>
+                </div>
             </div>
+        
             <div class="datos">
                 <h4>Oficina Principal</h4>
                 <p>
