--- a/PROYECTO_RAMOS/index2.html
+++ b/PROYECTO_RAMOS/index2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 
-<body>
+<body id="body">
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>
@@ -45,7 +45,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="#inicioVideo">INICIO</a></li>
+                <li><a href="#body">INICIO</a></li>
                 <li><a href="#servicios">SERVICIOS</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#proyectos">PROYECTOS</a></li>
@@ -56,57 +56,70 @@
     <!-- Fin cabecera -->
 
     <!-- Inicio video -->
-    <section id="inicioVideo">
+    <section id="ParallaxVideo">
+
+        <video autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+        </video>
         <div class="text_inicio">
             <h2>LÍDERES EN CALIDAD DE <br /> CONTRUCCIÓN E <br /> INFRAESTRUCTURA</h2>
             <h2>▼</h2>
         </div>
+
     </section>
     <!-- Fin video -->
 
     <!-- Inicio Servicios -->
-    <section id="servicios">
-        <div class="text_servicios">
-            <span>SERVICOS</span>
-        </div>
-        <div class="barra">
+    <section id="servicios1">
+        <section id="servicios">
+            <div class="text_servicios">
+                <span>SERVICOS</span>
+            </div>
+            <div class="barra">
 
-        </div>
-        <div class="cajas">
-            <article class="caja">
-                <div class="image-wrap">
-                    <img src="img/image1.webp" />
-                    <div class="info">
-                        <h3 class="titulo_servicios">Planteamiento</h3>
-                        <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar. Es
-                            fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
-                            fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más sobre
-                            ti.</p>
-                    </div>
-            </article>
-            <article class="caja">
-                <div class="image-wrap">
-                    <img src="img/image2.webp" />
-                    <div class="info">
-                        <h3 class="titulo_servicios">Maquetas</h3>
-                        <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar. Es
-                            fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
-                            fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más sobre
-                            ti.</p>
-                    </div>
-            </article>
-            <article class="caja">
-                <div class="image-wrap">
-                    <img src="img/image3.webp" />
-                    <div class="info">
-                        <h3 class="titulo_servicios">Construcción</h3>
-                        <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar. Es
-                            fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
-                            fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más sobre
-                            ti.</p>
-                    </div>
-            </article>
-        </div>
+            </div>
+            <div class="cajas">
+                <article class="caja">
+                    <div class="image-wrap">
+                        <img src="img/image1.webp" />
+                        <div class="info">
+                            <h3 class="titulo_servicios">Planteamiento</h3>
+                            <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar.
+                                Es
+                                fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
+                                fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más
+                                sobre
+                                ti.</p>
+                        </div>
+                </article>
+                <article class="caja">
+                    <div class="image-wrap">
+                        <img src="img/image2.webp" />
+                        <div class="info">
+                            <h3 class="titulo_servicios">Maquetas</h3>
+                            <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar.
+                                Es
+                                fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
+                                fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más
+                                sobre
+                                ti.</p>
+                        </div>
+                </article>
+                <article class="caja">
+                    <div class="image-wrap">
+                        <img src="img/image3.webp" />
+                        <div class="info">
+                            <h3 class="titulo_servicios">Construcción</h3>
+                            <p class="parrafo_servicios">Párrafo. Haz clic aquí para agregar tu propio texto y editar.
+                                Es
+                                fácil. Haz clic en Editar Texto o doble clic aquí para agregar tu contenido y cambiar la
+                                fuente. En este espacio puedes contar tu historia y permitir a tus usuarios saber más
+                                sobre
+                                ti.</p>
+                        </div>
+                </article>
+            </div>
+        </section>
     </section>
     <!-- Fin Servicios -->
 
@@ -167,27 +180,29 @@
     <!-- Fin Recorrido -->
 
     <!-- Inicio Proyectos -->
-    <section id="proyectos">
-        <div class="text_servicios">
-            <span>PROYECTOS</span>
-        </div>
-        <div class="barra">
+    <section id="proyectos1">
+        <section id="proyectos">
+            <div class="text_servicios">
+                <span>PROYECTOS</span>
+            </div>
+            <div class="barra">
 
-        </div>
-        <div class="cajas_proyectos">
-            <a class="proyecto" href="#">
-                <img src="img/proyecto1.jpg" alt="Proyecto 1" />
-            </a>
-            <a class="proyecto" href="#">
-                <img src="img/proyecto2.jpg" alt="Proyecto 2" />
-            </a>
-            <a class="proyecto" href="#">
-                <img src="img/proyecto3.jpg" alt="Proyecto 3" />
-            </a>
-            <a class="proyecto" href="#">
-                <img src="img/proyecto4.jpg" alt="Proyecto 4" />
-            </a>
-        </div>
+            </div>
+            <div class="cajas_proyectos">
+                <a class="proyecto" href="#">
+                    <img src="img/proyecto1.jpg" alt="Proyecto 1" />
+                </a>
+                <a class="proyecto" href="#">
+                    <img src="img/proyecto2.jpg" alt="Proyecto 2" />
+                </a>
+                <a class="proyecto" href="#">
+                    <img src="img/proyecto3.jpg" alt="Proyecto 3" />
+                </a>
+                <a class="proyecto" href="#">
+                    <img src="img/proyecto4.jpg" alt="Proyecto 4" />
+                </a>
+            </div>
+        </section>
     </section>
     <!-- Fin Proyectos -->
 
@@ -206,75 +221,89 @@
         </div>
     </section>
     <!--Fin Empresas -->
-    <section id="contacto">
-        <div class="text_servicios">
-            <span>CONTACTO</span>
-        </div>
-        <div class="barra">
-        </div>
-        <iframe class="mapai"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1179.303921470019!2d-75.6117620076242!3d6.172276716709452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcec43685f650005c!2sParque%20Obrero!5e0!3m2!1ses-419!2sco!4v1586719878734!5m2!1ses-419!2sco"
-            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-            tabindex="0">
-        </iframe>
-        <div class="principal_datos">
-            <div class="datos">
-                <h4>Preguntas</h4>
-                <p>
-                    Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos: 914-135-288 o completa
-                    el formulario a continuación
-                </p>
-                <h4>Redes Sociales</h4>
-                <div class="redes_sociales">
-                    <a target="blanck" href="https://web.facebook.com/?_rdc=1&_rdr">
-                        <img src="img/facebook.svg" alt="Facebook" title="Facebook">
-                    </a>
-                    <a target="blanck" href="https://www.youtube.com/">
-                        <img src="img/youtube.svg" alt="Youtube" title="Youtube">
-                    </a>
+
+    <!-- Inicios Contactos -->
+    <section id="contacto1">
+        <section id="contacto">
+            <div class="text_servicios">
+                <span>CONTACTO</span>
+            </div>
+            <div class="barra">
+            </div>
+            <iframe class="mapai"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1179.303921470019!2d-75.6117620076242!3d6.172276716709452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcec43685f650005c!2sParque%20Obrero!5e0!3m2!1ses-419!2sco!4v1586719878734!5m2!1ses-419!2sco"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0">
+            </iframe>
+            <div class="principal_datos">
+                <div class="datos">
+                    <h4>Preguntas</h4>
+                    <p>
+                        Para todo tipo de preguntas, comentarios e inquietudes; por favor llámanos: 914-135-288 o
+                        completa
+                        el formulario a continuación
+                    </p>
+
+                    <h4>Redes Sociales</h4>
+                    <div class="redes">
+                        <a target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr">
+                            <div class="redes_sociales">
+                                <img src="img/facebook.svg" alt="Facebook" title="Facebook">
+                            </div>
+                        </a>
+
+                        <a target="_blank" href="https://www.instagram.com/?hl=es-la">
+                            <div class="redes_sociales">
+                                <img src="img/instagram.svg" alt="Instagram" title="Instagram">
+                            </div>
+                        </a>
+
+                        <a target="_blank" href="https://www.youtube.com/">
+                            <div class="redes_sociales">
+                                <img src="img/youtube.svg" alt="Youtube" title="Youtube">
+                            </div>
+                        </a>
+
+                        <a target="_blank" href="https://twitter.com/explore">
+                            <div class="redes_sociales">
+                                <img src="img/twitter.svg" alt="Twitter" title="Twitter">
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="redes_sociales">
-                    <a target="blanck" href="https://www.instagram.com/?hl=es-la">
-                        <img src="img/instagram.svg" alt="Instagram" title="Instagram">
-                    </a>
-                    <a target="blanck" href="https://twitter.com/explore">
-                        <img src="img/twitter.svg" alt="Twitter" title="Twitter">
-                    </a>
+
+                <div class="datos">
+                    <h4>Oficina Principal</h4>
+                    <p>
+                        Av. Los Rosales 122, <br /> 28021, Madrid.
+                    </p>
+                    <p>
+                        info@misitio.com <br /> Teléfono: 914-135-288 <br /> Fax: 914-123-456
+                    </p>
+                    <h4>Empleos</h4>
+                    <p>
+                        Para aplicar a un trabajo en Esfera Construcciones, envía tu CV y carta de recomendación a:
+                        info@misitio.com
+                    </p>
+
+                    <div class="barra barra_contacto">
+                    </div>
+
+                    <h4>Recibe un presupuesto: </h4>
+                    <h4>914-135-288</h4>
+
                 </div>
             </div>
-        
-            <div class="datos">
-                <h4>Oficina Principal</h4>
-                <p>
-                    Av. Los Rosales 122, <br /> 28021, Madrid.
-                </p>
-                <p>
-                    info@misitio.com <br /> Teléfono: 914-135-288 <br /> Fax: 914-123-456
-                </p>
-                <h4>Empleos</h4>
-                <p>
-                    Para aplicar a un trabajo en Esfera Construcciones, envía tu CV y carta de recomendación a:
-                    info@misitio.com
-                </p>
-
-                <div class="barra barra_contacto">
-                </div>
-
-                <h4>Recibe un presupuesto: </h4>
-                <h4>914-135-288</h4>
-
-            </div>
-        </div>
+        </section>
     </section>
-    <a class="whatsapp" target="blanck" href="https://api.whatsapp.com/send?phone=573024453822">
+    <!-- Fin Contactos -->
+    <a class="whatsapp" target="_blanck" href="https://api.whatsapp.com/send?phone=573024453822">
         <img src="img/whatsapp.svg" alt="Icono whatsapp">
     </a>
     <footer>
         <p>&copy; Creado por Faiber Barragán -
-            <a target="blanck" href="http://www.faiber-barragan.digital">www.faiber-barragan.digital</a>
+            <a target="_blanck" href="http://www.faiber-barragan.digital">www.faiber-barragan.digital</a>
         </p>
-        <!-- Load Facebook SDK for JavaScript -->
-        <div id="fb-root"></div>
     </footer>
 
 </body>
