Se añade slider

--- a/PROYECTO_RAMOS/index2.html
+++ b/PROYECTO_RAMOS/index2.html
@@ -6,6 +6,13 @@
     <title>Ramos Constructions</title>
     <link rel="icon" type="image/x-icon" href="img/corona.png" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+
+    <!-- Slider -->
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body id="body">
@@ -181,13 +188,23 @@
 
     <!-- Inicio Proyectos -->
     <section id="proyectos1">
-        <section id="proyectos">
-            <div class="text_servicios">
-                <span>PROYECTOS</span>
-            </div>
-            <div class="barra">
+        <div class="text_servicios">
+            <span>PROYECTOS</span>
+        </div>
+        <div class="barra">
 
+        </div>
+        <section id="proyectos">
+            <div class="bxslider">
+                <div><img src="img/proyecto1.jpg" title="Funky roots"></div>
+                <div><img src="img/proyecto2.jpg" title="The long and winding road"></div>
+                <div><img src="img/proyecto3.jpg" title="Happy trees"></div>
+                <div><img src="img/proyecto4.jpg" title="Happy trees"></div>
             </div>
+
+
+
+            <!-- 
             <div class="cajas_proyectos">
                 <a class="proyecto" href="#">
                     <img src="img/proyecto1.jpg" alt="Proyecto 1" />
@@ -201,7 +218,7 @@
                 <a class="proyecto" href="#">
                     <img src="img/proyecto4.jpg" alt="Proyecto 4" />
                 </a>
-            </div>
+            </div> -->
         </section>
     </section>
     <!-- Fin Proyectos -->
