corregir menu #id

--- a/PROYECTO_RAMOS/index2.html
+++ b/PROYECTO_RAMOS/index2.html
@@ -55,7 +55,7 @@
                 <li><a href="#body">INICIO</a></li>
                 <li><a href="#servicios">SERVICIOS</a></li>
                 <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#proyectos">PROYECTOS</a></li>
+                <li><a href="#proyectos1">PROYECTOS</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
         </nav>
