--- a/PROYECTO_RAMOS/index2.html
+++ b/PROYECTO_RAMOS/index2.html
@@ -27,7 +27,7 @@
 
     <!-- Inicio cabecera -->
     <header id="cabecera">
-        <div class="barras">
+        <div id="mostrar-nav">
 
         </div>
         <div class="logo">
@@ -39,13 +39,13 @@
                 <span>CONSTRUCTIONS</span>
             </div>
         </div>
-        <nav class="menu">
+        <nav>
             <ul>
-                <li><a href="#body">INICIO</a></li>
-                <li><a href="#servicios">SERVICIOS</a></li>
-                <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#proyectos1">PROYECTOS</a></li>
-                <li><a href="#contacto">CONTACTO</a></li>
+                <li><a class="ocul" href="#body">INICIO</a></li>
+                <li><a class="ocul" href="#servicios">SERVICIOS</a></li>
+                <li><a class="ocul" href="#us">NOSOTROS</a></li>
+                <li><a class="ocul" href="#proyectos1">PROYECTOS</a></li>
+                <li><a class="ocul" href="#contacto">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -128,7 +128,7 @@
 
     <!-- Inicio Nosotros -->
     <section id="nosotros">
-        <div class="nosotrosA">
+        <div id="us" class="nosotrosA">
             <div class="text_nosotros">
                 <span>NOSOTROS</span>
                 <div class="izquierda">
